Dibuat menggunakan Colaboratory

--- a/PCA_Iris.ipynb
+++ b/PCA_Iris.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyOHxmD7lGb9bk87kbCHXHct",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/niswatulsifa/niswatulsifa.github.io/blob/main/PCA_Iris.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "source": [
@@ -43,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "q14eep7MdPLs"
       },
@@ -87,7 +99,7 @@
         "id": "gqiUHPI-dZJG",
         "outputId": "ca2aeb92-06f0-40d9-ad77-78dc5652bbf8"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +300,7 @@
         "id": "KGRZ5mSmdcvb",
         "outputId": "b3c61435-5d6f-4eaf-f022-ba8a281017d4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -335,7 +347,7 @@
         "id": "juWL41UJdei6",
         "outputId": "b50c0abb-94b7-4203-cfea-7ec68bc1e2d3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -378,7 +390,7 @@
       "metadata": {
         "id": "v2Mw86wddgqz"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -432,7 +444,7 @@
         "id": "-v8XVPmVdihm",
         "outputId": "27b356e2-5d3a-4110-cb62-edd29abc20d5"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -494,7 +506,7 @@
       "metadata": {
         "id": "FmYWghebdlMm"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -520,7 +532,7 @@
         "id": "_QlfD1Yadn9I",
         "outputId": "5c6bb25c-bdfa-4f5e-cc41-32acf0f99e79"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,7 +577,7 @@
         "id": "th5S6PKMdpl4",
         "outputId": "147b89af-35b7-489e-91db-99e437f488c2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +627,7 @@
         "id": "oqzGU8-SdrpL",
         "outputId": "e4a90bf5-c293-4f53-a51d-cfcaab070324"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -676,7 +688,7 @@
         "id": "swCEwJF8duFh",
         "outputId": "00771dcd-9cf1-42bb-b912-aeeedeacc696"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -718,7 +730,7 @@
         "id": "4wb5iHe00d4c",
         "outputId": "4ed93c9a-5318-4bfa-d3fa-de61657a038c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -757,7 +769,7 @@
         "id": "5aBj9Nj7dxHk",
         "outputId": "26ca2aa5-8e21-4ff2-a47d-db8ff14822bf"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +818,7 @@
         "id": "G-nxaYNAdzSH",
         "outputId": "14347369-de89-40e2-c24e-70d9ea9de974"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -856,7 +868,7 @@
         "id": "g1e1rfP2d1pV",
         "outputId": "ef5a5d0e-360b-432d-e04e-6d581124c245"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -899,7 +911,7 @@
       "metadata": {
         "id": "ePyryw-6d3jZ"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +955,7 @@
         "id": "soVXuwkQd55Y",
         "outputId": "aeae1241-6902-456e-e2ba-80276e6b6000"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1004,7 +1016,7 @@
         "id": "pmTp_ZpId7fo",
         "outputId": "f0cc71db-dcd5-46db-90ff-687e93cc8e88"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1047,7 +1059,7 @@
       "metadata": {
         "id": "AEJlIA7dd930"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1093,7 +1105,7 @@
         "id": "h9_1QSmRd_vK",
         "outputId": "4eed91c6-fa15-4e10-9624-66de93f0dfdf"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1135,7 +1147,7 @@
       "metadata": {
         "id": "dWYOK5UoeCrE"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1172,7 +1184,7 @@
         "id": "rZLMc6YWeEXp",
         "outputId": "590c7e5c-cdb2-4aaa-8314-daff09710ce2"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1219,7 +1231,7 @@
         "id": "pf-P9cKkj1pG",
         "outputId": "32cfc826-52d4-4552-f8b0-08abfa9d8feb"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1432,7 +1444,7 @@
         "id": "nwVxZ878j33i",
         "outputId": "47d41974-d4e7-428c-cc09-490986f9b427"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
